# backupd

./: .dockerignore  .gitlab-ci.yaml  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
agent/: Cargo.toml  Dockerfile
agent/src/: main.rs
client/: Cargo.toml  Dockerfile
docs/: protocol.md
examples/: config.json
scripts/: docker-entrypoint.sh
server/: Cargo.toml  Dockerfile
server/src/: main.rs
src/: crypto.rs  db.rs  error.rs  lib.rs  protocol.rs
src/agent/: mod.rs
src/server/: mod.rs
tests/: db.rs  protocol.rs  slow_protocol.rs
