[package]
name = "backupd"
version = "0.0.1"
authors = ["Lucas Salibian <lucas.salibian@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "^1.1.4"
error-chain = "^0.12.1"

openssl = "^0.10.23"
rand = "^0.6.5"
memmap = "^0.7.0"

[workspace]
members = ["./server/", "./agent/"]
